added self register

--- a/renewableenergytoken-app/src/index.html
+++ b/renewableenergytoken-app/src/index.html
@@ -33,8 +33,7 @@
 		  <li class="nav-item">
 			<a class="nav-link" href="#" id="approve-User-nav-item">Approve User</a>
 		  </li>
-
-		  <li class="nav-item">
+		  <li class="nav-item" id="self-register-nav-item-li" style="display:none">
 			<a class="nav-link" href="#" id="self-register-nav-item">Register</a>
 		  </li>
 		</ul>
@@ -89,11 +88,7 @@
 					<br/>
 				</label>
 				
-				<label class="subs-title">
-					<b>Address: </b>&nbsp;
-					<input type="text" class="generate-rec form-control" id="address-value"></input>
-					<br/>
-				</label>
+	
 		
 				<div class="row" style="padding-top:20px"> 
 					  <center><button type="submit" id="submit-self-register" class="btn btn-primary btn-action align-center">Register</button></center>
