--- a/renewableenergytoken-app/src/index.html
+++ b/renewableenergytoken-app/src/index.html
@@ -15,14 +15,14 @@
 </head>
 
 <body>
-	<div class="container">
+	<div>
 		<div class="row">      
         <div class="logo text-center">
 		      <h2>Trading Renewable Energy Certificate</h2>
           <h3></h3>
         </div>
       </div>
-	  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+	  <nav class="navbar navbar-inverse navbar-expand-lg navbar-light bg-light">
 		<div class="container-fluid">
 			<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
@@ -61,7 +61,7 @@
 			</li>
 
 			<li class="nav-item" id="top-up-nav-item-li" style="display:none">
-				<a class="nav-link" href="#" id="top-up-nav-item">Buy REC</a>
+				<a class="nav-link" href="#" id="top-up-nav-item">Top up</a>
 			</li>
 			</ul>
 		</div>
