--- a/renewableenergytoken-app/src/index.html
+++ b/renewableenergytoken-app/src/index.html
@@ -140,13 +140,13 @@
 
             <label class="subs-title">
                 <b>Name: </b>&nbsp;
-                  <input type="text" class="generate-rec form-control" id="name-value"></input>
+                  <input type="text" class="generate-rec form-control" id="create-rec-name-value"></input>
                 <br/>
             </label>
             
             <label class="subs-title">
                 <b>Address: </b>&nbsp;
-                  <input type="text" class="generate-rec form-control" id="address-value"></input>
+                  <input type="text" class="generate-rec form-control" id="create-rec-address-value"></input>
                 <br/>
             </label>
 
