--- a/renewableenergytoken-app/src/index.html
+++ b/renewableenergytoken-app/src/index.html
@@ -270,12 +270,17 @@
 		  <div class="col-lg-6 col-lg-offset-1 distributor" id="sell-rec-page" style="display: none;">
 			<div style="margin-left:40px;">
 				<h2 class="subs-title text-center">Sell REC</h2>
-             
+				<div class="form-group">
+					<label for="sell-rec-to_address">From</label>
+					<select id='sell-rec-to_address' class="form-control"></select>
+				  </div>
+				  <div class="form-group">
 				<label class="subs-title">
 					<b>Id: </b>&nbsp;
-					  <input type="text" class="sell-rec form-control" id="id-value"></input>
+					  <input type="text" class="sell-rec form-control" id="sell-rec-id-value"></input>
 					<br/>
 				</label>
+			</div>
 				
 				<center style="padding-top:25px"><button type="submit" id="submit-sell-rec" class="btn btn-primary btn-action align-center">Sell REC</button></center>
 	
