--- a/renewableenergytoken-app/src/index.html
+++ b/renewableenergytoken-app/src/index.html
@@ -8,7 +8,8 @@
   <title>Renewable Energy Token App</title>
   <link href='https://fonts.googleapis.com/css?family=Lobster|Open+Sans:400,400italic,300italic,300|Raleway:300,400,600' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="css/toastr.min.css">
   <link rel="stylesheet" type="text/css" href="css/animate.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -16,13 +17,15 @@
 
 <body>
 	<div>
-		<div class="row">      
+		<div >      
         <div class="logo text-center">
 		      <h2>Trading Renewable Energy Certificate</h2>
           <h3></h3>
         </div>
       </div>
-	  <nav class="navbar navbar-inverse navbar-expand-lg navbar-light bg-light">
+	  <!-- <nav class="navbar navbar-inverse navbar-expand-lg navbar-light bg-light"> -->
+		<nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+
 		<div class="container-fluid">
 			<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
