--- a/renewableenergytoken-app/src/index.html
+++ b/renewableenergytoken-app/src/index.html
@@ -274,7 +274,7 @@
 			<div style="margin-left:40px;">
 				<h2 class="subs-title text-center">Sell REC</h2>
 				<div class="form-group">
-					<label for="sell-rec-to_address">From</label>
+					<label for="sell-rec-to_address">To</label>
 					<select id='sell-rec-to_address' class="form-control"></select>
 				  </div>
 				  <div class="form-group">
