--- a/renewableenergytoken-app/src/index.html
+++ b/renewableenergytoken-app/src/index.html
@@ -133,12 +133,12 @@
         <div class="col-lg-6 col-lg-offset-1 distributor" id="create-rec-page" style="display: none;">
           <div style="margin-left:40px;">
             <h2 class="subs-title text-center">Create REC</h2>
-            <label class="subs-title">
+            <!-- <label class="subs-title">
                 <b>Id: </b>&nbsp;
                   <input type="text" class="generate-rec form-control" id="id-value" placeholder="Enter Id here"></input>
                 <br/>
                 <br>
-            </label>
+            </label> -->
 
 
             <label class="subs-title">
