--- a/renewableenergytoken-app/src/index.html
+++ b/renewableenergytoken-app/src/index.html
@@ -324,6 +324,11 @@
 		  <div class="col-lg-6 col-lg-offset-1 distributor" id="topup-balance-page" style="display: none;">
 				<div style="margin-left:40px;">
 				<h2 class="subs-title text-center">Top Up Balance</h2>
+				<label class="subs-title">
+					<b>Price: </b>&nbsp;
+					  <input type="text" class="topup form-control" id="top-up-price-value"></input>
+					<br/>
+				</label>
 		
 				<div class="row" style="padding-top:20px"> 
 					<center><button type="submit" id="submit-top-up" class="btn btn-primary btn-action align-center">Top Up Balance</button></center>
