--- a/renewableenergytoken-app/src/index.html
+++ b/renewableenergytoken-app/src/index.html
@@ -36,7 +36,7 @@
 				<a class="nav-link" href="#" id="get-certificates-of-user-nav-item">Get Certificates Of User</a>
 			</li>
 			<li class="nav-item" id="get-certificate-nav-item-li" style="display:none">
-				<a class="nav-link" href="#" id="get-certificate-nav-item">Get Certificate</a>
+				<a class="nav-link" href="#" id="get-certificate-nav-item">Get Certificate <span id="apreciate-depreciate-nav-text"> </span></a>
 			</li>
 			<li class="nav-item" id="approve-distributor-nav-item-li" style="display:none">
 				<a class="nav-link" href="#" id="approve-distributor-nav-item">Approve Distributor</a>
@@ -95,7 +95,7 @@
 				</label>
 		
 				<div class="row" style="padding-top:20px"> 
-					  <center><button type="submit" id="submit-approve-distributor" class="btn btn-primary btn-action align-center">Approve Distributor</button></center>
+					  <center><button type="submit" id="submit-approve-distributor" style="width:200px" class="btn btn-primary btn-action align-center">Approve Distributor</button></center>
 					  <br>
 				</div>
 			</div>
@@ -221,8 +221,8 @@
 			</div>
 		  </div>
 
-		  <div class="col-lg-6 col-lg-offset-1 registered-user" id="get-certificate-page" style="display: none;">
-			<div style="margin-left:40px;">
+		  <div class="row registered-user" id="get-certificate-page" style="display: none;">
+			<div class="col-lg-6 forms" style="margin-left:40px;">
 			  <h2 class="subs-title text-center">Get Certificate</h2>
 			  
 			  <label class="subs-title">
@@ -256,8 +256,26 @@
                   <input type="text" class="generate-rec form-control" id="get-certificate-page-price-value" readonly="readonly"></input>
                 <br/>
             </label>
-			  <hr style="width:200px">
+			  
 			</div>
+
+			<div class='col-lg-6 forms' id="appreciate-depreciate-form">
+				<form>
+					<h3>Appreciate / Depreciate</h3>                      
+					<div class="form-group" >
+						<label class="subs-title" for="assess_asset_id"><b>Asset Id: </b>&nbsp;
+							<input type="text" class="generate-rec form-control" id="assess_asset_id" placeholder="Enter asset id">
+						</label>
+					  </div>
+					  <div class="form-group">
+						<label  class="subs-title" for="assess_value"> <b>value: </b>&nbsp; 
+							<input type="text" class="form-control" id="assess_value" placeholder="Enter value">
+						</label>
+					  </div>
+					<button type="button" id='appreciate_asset' class="btn btn-success">Appreciate</button>
+					<button type="button" id='depreciate_asset' class="btn btn-danger">Depreciate</button>
+				  </form> 
+			  </div>
 		  </div>
 
 		<div class="col-lg-6 col-lg-offset-1 distributor" id="verify-rec-page" style="display: none;">
