--- a/renewableenergytoken-app/src/index.html
+++ b/renewableenergytoken-app/src/index.html
@@ -61,9 +61,9 @@
 				<a class="nav-link" href="#" id="buy-rec-nav-item">Buy REC</a>
 			</li>
 
-			<li class="nav-item" id="top-up-nav-item-li" style="display:none">
+			<!-- <li class="nav-item" id="top-up-nav-item-li" style="display:none">
 				<a class="nav-link" href="#" id="top-up-nav-item">Top up</a>
-			</li>
+			</li> -->
 			<li class="nav-item" id="self-register-nav-item-li" style="display:none">
 				<a class="nav-link" href="#" id="self-register-nav-item">Register</a>
 			</li>
@@ -165,7 +165,7 @@
                 <br/>
             </label>
 
-            <center style="padding-top:25px"><button type="submit" id="submit-generate-rec" class="btn btn-primary btn-action align-center">Generate REC</button></center>
+            <center style="padding-top:25px"><button type="submit" id="submit-generate-rec" class="btn btn-success btn-action align-center">Generate REC</button></center>
             
           </div>
         </div>
